kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: welcome-container-deployment
  labels:
    app: welcome-container
spec:
  replicas: 1
  selector:
    matchLabels:
      app: welcome-container
  template:
    metadata:
      labels:
        app: welcome-container
    spec:
      containers:
        - name: welcome-container
          image: hajism/testingwelcome
          ports:
            - containerPort: 80
