kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: welcome-container-service
  labels:
    app: welcome-container
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
  selector:
    app: welcome-container
